# ComicOfTheDay

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bootstrap.sh  pyproject.toml  requirements.txt  start-comicoftheday.sh  stop-comicoftheday.sh
config/: comicoftheday.yaml
man/: start-comicoftheday.1  stop-comicoftheday.1
src/comicoftheday/: app.py  cache.py  cli.py  colors.py  marvel.py
web/templates/: about.html  api_docs.html  base.html  index.html  sitemap.html
